# PaperScout

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: ranking.json
data/raw/: candidates.example.json
docs/: CANDIDATE_FORMAT.md  DATA_SOURCES.md  DEVELOPMENT.md  FEEDBACK.md  LLM.md  MATERIALS.md  PROJECT_PLAN.md  RANKING.md
prompts/: check_claims.md  explain_paper.md
src/paperscout/: __init__.py
src/paperscout/analysis/: __init__.py  explainer.py  llm_explainer.py  materials.py  pdf_extract.py
src/paperscout/collectors/: __init__.py  arxiv.py  cache.py  github.py  manual.py  merge.py  semantic_scholar.py
src/paperscout/feedback/: __init__.py  profile.py
src/paperscout/interfaces/: __init__.py  cli.py
src/paperscout/llm/: __init__.py  client.py
src/paperscout/ranking/: __init__.py  scorer.py
src/paperscout/recommender/: __init__.py  select.py
src/paperscout/storage/: __init__.py  jsonl_store.py  schemas.py
tests/: test_cli.py  test_collectors_cache.py  test_collectors_merge.py  test_collectors_sources.py  test_explainer.py  test_feedback_profile.py  test_jsonl_store.py  test_llm_client.py  test_llm_explainer.py  test_manual_candidates.py  test_materials.py  test_ranking.py  test_storage_schemas.py
