[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperscout"
version = "0.1.0"
description = "A personal research assistant for recommending and analyzing high-attention AI and AI for Science papers."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "LI Shaokang", email = "slifr@connect.ust.hk" }
]
dependencies = [
  "pypdf>=4.0"
]

[project.scripts]
paperscout = "paperscout.interfaces.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
